DistortImageOps - Removed deprecated functions