@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011-2017, Peter Abeles. All Rights Reserved.
+ * Copyright (c) 2011-2020, Peter Abeles. All Rights Reserved.
  *
  * This file is part of BoofCV (http://boofcv.org).
  *
@@ -17,6 +17,8 @@
  */
 
 package boofcv.io.video;
+
+import java.lang.reflect.InvocationTargetException;
 
 /**
  * Allows a {@link VideoInterface} to be created abstractly without directly referencing
@@ -47,10 +49,10 @@ public class BoofVideoManager {
 	public static VideoInterface loadManager( String pathToManager ) {
 		try {
 			Class c = Class.forName(pathToManager);
-			return (VideoInterface) c.newInstance();
+			return (VideoInterface) c.getConstructor().newInstance();
 		} catch (ClassNotFoundException e) {
 			throw new RuntimeException("Class not found.  Is it included in the class path?");
-		} catch (InstantiationException | IllegalAccessException e) {
+		} catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 			throw new RuntimeException(e);
 		}
 	}
