@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011-2018, Peter Abeles. All Rights Reserved.
+ * Copyright (c) 2011-2020, Peter Abeles. All Rights Reserved.
  *
  * This file is part of BoofCV (http://boofcv.org).
  *
@@ -19,6 +19,8 @@
 package boofcv.visualize;
 
 import boofcv.io.video.VideoInterface;
+
+import java.lang.reflect.InvocationTargetException;
 
 public class VisualizeData {
 
@@ -50,10 +52,11 @@ public class VisualizeData {
 	public static <T> T loadGenerator(String pathToGenerator) {
 		try {
 			Class c = Class.forName(pathToGenerator);
-			return (T) c.newInstance();
+			return (T) c.getConstructor().newInstance();
 		} catch (ClassNotFoundException e) {
 			throw new RuntimeException("Class not found.  Is it included in the class path?");
-		} catch (InstantiationException | IllegalAccessException e) {
+		} catch (InstantiationException | IllegalAccessException |
+				NoSuchMethodException | InvocationTargetException e) {
 			throw new RuntimeException(e);
 		}
 	}
